include_directories(
    ${PROJECT_SOURCE_DIR}/Src
    )
add_subdirectory (doublim)
add_subdirectory (lim)
add_subdirectory (limdisc)
add_subdirectory (pad)
add_subdirectory (std)
add_subdirectory (vol)
add_subdirectory (std2d)
add_subdirectory (stdnd)
add_subdirectory (stdg)
add_subdirectory (stdi)
add_subdirectory (stdf)
add_subdirectory (stdc)
add_subdirectory (stda)
add_subdirectory (stdndc)
add_subdirectory (stdr)
add_subdirectory (callable)
add_subdirectory (exoi)
add_subdirectory (std2dg)
add_subdirectory (stdx)
