add_library (libmath OBJECT
    ap_fusai_levy/fractional_fft.c
    ap_fusai_levy/linalg.c
    ap_fusai_levy/QDiscreteAsian.c
    ap_fusai_levy/rncf.c
    ap_fusai_levy/spline.c
    ap_fusai_levy/nrutil.c
    ap_fusai_levy/DiscreteAsianFMM.c
    ap_kou_model/functions.C
    ap_kou_model/common.C
    bsnd_math/noyau_bsde.c
    bsnd_math/bsnd_path.c
    bsnd_math/svd_bs_tools.cpp
    cdo/cdo_losses.c
    cdo/cdo_math.c
    cdo/company.c
    cdo/clayton_copula.c
    cdo/double_t_copula.c
    cdo/gaussian_copula.c
    cdo/Implied_Copula.c
    cdo/nig_copula.c
    cdo/structs.c
    cdo/student.c
    cdo/Base_Correlation.c
    cdo/nig.c
    cdo/copulas.c
    cgmy/cgmy.C
    cgmy/rnd.C
    complex_erf.C
    fft.C
    generalized_sobol_dim_5000.c
    integral.c
    intg.C
    jump.c
    levy.C
    levy_fd.C
    levy_fd_swing.C
    linsys.c
    mc_am.c
    moments.c
    numerics.C
    alfonsi.c
    progonka.C
    solversyslin.c
    wienerhopf.c
    wienerhopf_rs.c
    ESM_func.c
    golden.c
    mc_lmm_glassermanzhao.c
    credit_cds/cdscirpp.C
    credit_cds/cdscirppmc.C
    credit_cds/cdsmkt.C
    credit_cds/cirpp.C
    credit_cds/gm.C
    credit_cds/intensitycalib.C
    equity_pricer/tool_box.c
    equity_pricer/implied_bs.c
    equity_pricer/finance_tool_box.c
    equity_pricer/levy_process.c
    equity_pricer/levy_diffusion.c
    equity_pricer/levy_process_constraints.c
    equity_pricer/levy_diffusion_constraints.c
    equity_pricer/carr.c
    equity_pricer/attari.c
    equity_pricer/sparse_grid_constructor.c
    equity_pricer/gridsparse_constructor.c
    equity_pricer/gridsparse_functions.c
    equity_pricer/pde_tools.c
    equity_pricer/TList.c
    equity_pricer/sparse_point.c
    equity_pricer/contains.c
    highdim_solver/eigenval.c
    highdim_solver/errhandl.c
    highdim_solver/factor.c
    highdim_solver/itersolv.c
    highdim_solver/highdim_matrix.c
    highdim_solver/mlsolv.c
    highdim_solver/operators.c
    highdim_solver/operats.c
    highdim_solver/precond.c
    highdim_solver/qmatrix.c
    highdim_solver/rtc.c
    highdim_solver/solver.c
    highdim_solver/highdim_vector.c
    highdim_solver/cps_debug.c
    highdim_solver/cps_assertions.c
    highdim_solver/cps_grid.c
    highdim_solver/cps_grid_tuner.c
    highdim_solver/cps_grid_node.c
    highdim_solver/cps_function.c
    highdim_solver/cps_stencil.c
    highdim_solver/cps_stencil_operator.c
    highdim_solver/cps_stencil_pattern.c
    highdim_solver/cps_problem_solver.c
    highdim_solver/cps_pde_problem.c
    highdim_solver/cps_boundary_description.c
    highdim_solver/cps_pde.c
    highdim_solver/cps_pde_term.c
    highdim_solver/cps_pde_integral_term.c
    InterestRateModelTree/TreeCIRpp1D/TreeCIRpp1D.c
    InterestRateModelTree/TreeHW1dGeneralized/TreeHW1dGeneralized.c
    InterestRateModelTree/TreeHW2D/TreeHW2D.c
    InterestRateModelTree/TreeLRS1D/TreeLRS1D.c
    InterestRateModelTree/TreeShortRate/TreeShortRate.c
    libor_affine_model/libor_affine_framework.c
    libor_affine_model/libor_affine_models.c
    libor_affine_model/libor_affine_pricing.c
    lmm/lmm_volatility.c
    lmm/lmm_libor.c
    lmm/lmm_products.c
    lmm/lmm_numerical.c
    lmm/lmm_zero_bond.c
    lmm/lmm_basis.c
    lmm/math_andersen.C
    lmm_stochvol_piterbarg/lmm_stochvol_piterbarg_aux.c
    lmm_stochvol_piterbarg/ap_averagingtech_lmmpit.c
    read_market_zc/InitialYieldCurve.c
    )
