add_library (libbs1d OBJECT
	bs1d_doublim/ap_laplace_double_parisian.C
	bs1d_doublim/ap_out_laplace.c
	bs1d_doublim/bs1d_doublim.c
	bs1d_doublim/bs1d_doublim_test.c
	bs1d_doublim/cf_callin_kunitomoikeda.c
	bs1d_doublim/cf_callout_kunitomoikeda.c
	bs1d_doublim/cf_putin_kunitomoikeda.c
	bs1d_doublim/cf_putout_kunitomoikeda.c
	bs1d_doublim/fd_cryer_in.c
	bs1d_doublim/fd_cryer_out.c
	bs1d_doublim/fd_fem_updownout_bs.c
	bs1d_doublim/fd_gauss_in.c
	bs1d_doublim/fd_gauss_out.c
	bs1d_doublim/fd_psor_in.c
	bs1d_doublim/fd_psor_out.c
	bs1d_doublim/mc_inbaldi.c
	bs1d_doublim/mc_outbaldi.c
	bs1d_doublim/mc_parisianupdownin_bs.c
	bs1d_doublim/mc_parisianupdownout_bs.c
	bs1d_doublim/tr_ritchken_in.c
	bs1d_doublim/tr_ritchken_out.c
	bs1d_lim/bs1d_lim.c
	bs1d_lim/bs1d_lim_test.c
	bs1d_lim/ap_laplace_parisian.C
	bs1d_lim/cf_calldownin.c
	bs1d_lim/cf_calldownout.c
	bs1d_lim/cf_callupin.c
	bs1d_lim/cf_callupout.c
	bs1d_lim/cf_putdownin.c
	bs1d_lim/cf_putdownout.c
	bs1d_lim/cf_putupin.c
	bs1d_lim/cf_putupout.c
	bs1d_lim/fd_cryer_downin.c
	bs1d_lim/fd_cryer_downout.c
	bs1d_lim/fd_cryer_upin.c
	bs1d_lim/fd_cryer_upout.c
	bs1d_lim/fd_fem_out_bs.c
	bs1d_lim/fd_gauss_downin.c
	bs1d_lim/fd_gauss_downout.c
	bs1d_lim/fd_gauss_upin.c
	bs1d_lim/fd_gauss_upout.c
	bs1d_lim/fd_psor_downin.c
	bs1d_lim/fd_psor_downout.c
	bs1d_lim/fd_psor_upin.c
	bs1d_lim/fd_psor_upout.c
	bs1d_lim/mc_baldi_in.c
	bs1d_lim/mc_baldi_out.c
	bs1d_lim/mc_parisianin_bs.c
	bs1d_lim/mc_parisianout_bs.c
	bs1d_lim/tr_dermankani.c
	bs1d_lim/tr_ritchken_downin.c
	bs1d_lim/tr_ritchken_downout.c
	bs1d_lim/tr_ritchken_upin.c
	bs1d_lim/tr_ritchken_upout.c
	bs1d_lim/tr_rogersstapleton_downout.c
	bs1d_lim/tr_rogersstapleton_upout.c
	bs1d_limdisc/ap_broadieglassermankou.c
	bs1d_limdisc/ap_fusaiabrahamssgarra.c
	bs1d_limdisc/bs1d_limdisc.c
	bs1d_limdisc/bs1d_limdisc_test.c
	bs1d_limdisc/fd_limdisc.c
	bs1d_limdisc/mc_variancereduction.c
	bs1d_limdisc/tr_cheuckvorst.c
	bs1d_pad/ap_fixedasian_fusaitagliani.c
	bs1d_pad/ap_fixedasian_fusaimeucci.c
	bs1d_pad/ap_fixedasian_laplace.c
	bs1d_pad/ap_fixedasian_laplacefourier.c
	bs1d_pad/ap_fixedasian_levy.c
	bs1d_pad/ap_fixedasian_milevskyposner.c
	bs1d_pad/ap_fixedasian_thompsonlow.c
	bs1d_pad/ap_fixedasian_thompsonup.c
	bs1d_pad/ap_fixedasian_lordlow.c
	bs1d_pad/ap_fixedasian_lordup.c
	bs1d_pad/ap_fixedasian_turnbullwakeman.c
	bs1d_pad/ap_fixedasian_zhang.c
	bs1d_pad/ap_floatingasian_zhang.c
	bs1d_pad/bs1d_pad.c
	bs1d_pad/bs1d_pad_test.c
	bs1d_pad/cf_fixed_calllookback.c
	bs1d_pad/cf_fixed_putlookback.c
	bs1d_pad/cf_floating_calllookback.c
	bs1d_pad/cf_floating_putlookback.c
	bs1d_pad/fd_explicit_lookback.c
	bs1d_pad/fd_fixedasian_beh.c
	bs1d_pad/fd_fixedasian_rodgershi2.c
	bs1d_pad/fd_fixedasian_rodgershi.c
	bs1d_pad/mc_fixedasian_glassermann.c
	bs1d_pad/mc_fixedasian_kemnavorst.c
	bs1d_pad/mc_fixedasian_robbinsmoro.c
	bs1d_pad/mc_fixedasian_stratification_ghs.c
	bs1d_pad/mc_fixedasian_stratification_adaptive.c
	bs1d_pad/mc_floatingasian_standard.c
	bs1d_pad/mc_lookbackmax_andersen.c
	bs1d_pad/mc_lookbackmin_andersen.c
    bs1d_pad/mc_movingaverage_BernhartTankovWarin.c
	bs1d_pad/tr_asian_fsg.c
	bs1d_pad/tr_babbs_call.c
	bs1d_pad/tr_babbs_put.c
	bs1d_pad/mc_fixedasian_exactmethod.c
	bs1d_pad/ap_fixedasian_carmonadurlemann.C
	bs1d_pad/tr_asian_singularpointssup.c
	bs1d_std/ap_bjerksundstensland.c
	bs1d_std/ap_bunchjohnsonn.c
	bs1d_std/ap_carr_putamer.c
	bs1d_std/ap_hostapletonsubrahmanyam.c
	bs1d_std/ap_ju_putamer.c
	bs1d_std/ap_lba.c
	bs1d_std/ap_luba.c
	bs1d_std/ap_mcmillan.c
	bs1d_std/ap_waley.c
	bs1d_std/bs1d_std.c
	bs1d_std/bs1d_std_test1.c
	bs1d_std/bs1d_std_test2.c
	bs1d_std/bs1d_std_test3.c
	bs1d_std/bs1d_std_test.c
	bs1d_std/bs1d_std_testpatry1.c
	bs1d_std/bs1d_std_testpatry.c
	bs1d_std/cf_call.c
	bs1d_std/cf_callspread.c
	bs1d_std/cf_digit.c
	bs1d_std/cf_put.c
	bs1d_std/fd_brennanschwartz.c
	bs1d_std/fd_cryer.c
	bs1d_std/fd_explicit_bs.c
	bs1d_std/fd_fixedpoint.c
	bs1d_std/fd_fmgh.c
	bs1d_std/fd_galerkin_discfem.c
	bs1d_std/fd_gauss.c
	bs1d_std/fd_howard.c
	bs1d_std/fd_multigrid_euro_bs.c
	bs1d_std/fd_psor.c
	bs1d_std/fd_sor.c
	bs1d_std/fd_trasparent.C
	bs1d_std/mc_antithetic.c
	bs1d_std/mc_barraquandmartineau.c
	bs1d_std/mc_bartyroystrugarek.C
	bs1d_std/mc_broadieglassermann.c
	bs1d_std/mc_lionsregnier.c
	bs1d_std/mc_longstaffschwartz.c
	bs1d_std/mc_randomquantization.c
	bs1d_std/mc_rogers.c
	bs1d_std/mc_standard.c
	bs1d_std/mc_tsitsiklisvanroy.c
	bs1d_std/tr_bbsr.c
	bs1d_std/tr_coxrossrubinstein.c
	bs1d_std/tr_euler_bs.c
	bs1d_std/tr_extendedCRR.c
	bs1d_std/tr_figlewskigao.c
	bs1d_std/tr_hullwhite.c
	bs1d_std/tr_kamradritchken_bs.c
	bs1d_std/tr_lnthirdmoment.c
	bs1d_std/tr_mmsr.c
	bs1d_std/tr_patry1.c
	bs1d_std/tr_patry.c
	bs1d_std/tr_thirdmoment.c
	bs1d_std/ap_cosine_bs_euro.c
	bs1d_std/ap_cosine_bs_amer.c
	bs1d_std/mc_mlsm_wangcaflisch.c
	bs1d.c
	)
