add_library (libbs2d OBJECT
	bs2d_std2d/bs2d_std2d.c
	bs2d_std2d/bs2d_std2d_test.c
	bs2d_std2d/cf_callmax.c
	bs2d_std2d/cf_exchange.c
	bs2d_std2d/cf_putmin.c
	bs2d_std2d/fd_adi.c
	bs2d_std2d/fd_bcgstab.c
	bs2d_std2d/fd_explicit_bs2d.c
	bs2d_std2d/fd_fmgh2d.c
	bs2d_std2d/fd_fvexpl.c
	bs2d_std2d/fd_gmres.c
	bs2d_std2d/fd_howard2d.c
	bs2d_std2d/fd_multigrid_euro_bs2d.c
	bs2d_std2d/fd_psor2d.c
	bs2d_std2d/mc_barraquandmartineau2d.c
	bs2d_std2d/mc_bartyroystrugarek2d.C
	bs2d_std2d/mc_broadieglassermann2d.c
	bs2d_std2d/mc_lionsregnier2d.c
	bs2d_std2d/mc_longstaffschwartz2d.c
	bs2d_std2d/mc_randomquantization2d.c
	bs2d_std2d/mc_standard2d.c
	bs2d_std2d/tr_boyleevninegibbs.c
	bs2d_std2d/tr_euler_bs2d.c
	bs2d_std2d/tr_kamradritchken_bs2d.c
	bs2d_std2d/tr_producttr.c
	bs2d_std2d/mc_jainoosterlee.c
	bs2d_std2dg/bs2d_std2dg.c
	bs2d_std2dg/ap_spread_carmona.c
	bs2d_std2dg/ap_spread_bjerksund.c
	bs2d_std2dg/ap_spread_hurdzhou_bs.c
	bs2d.c
	)
