add_library (libhes1d OBJECT
	hes1d.c
	hes1d_lim/hes1d_lim.c
	hes1d_lim/ap_fastwhbar_hes.c
	hes1d_lim/mc_alfonsi_out.c
	hes1d_pad/hes1d_pad.c
	hes1d_pad/mc_asianfc_hes.c
	hes1d_pad/mc_asian_knn_hes.c
	hes1d_pad/mc_asiankusouka_hes.C
	hes1d_pad/mc_asian_nv_hes.c
	hes1d_pad/mc_alfonsi_asian.c
	hes1d_pad/mc_am_asian_alfonsi_longstaffschwartz_hes1d.c
	hes1d_pad/mc_am_asian_alfonsi_andersenbroadie_hes1d.c
	hes1d_pad/ap_fjm_asian_heston.c
	hes1d_std/ap_alos_heston.c
	hes1d_std/ap_bgm_heston.c
	hes1d_std/ap_antonelliscarlatti_heston.c
	hes1d_std/cf_call_heston.C
	hes1d_std/cf_put_heston.C
	hes1d_std/fd_natalinibriani_heston.C
	hes1d_std/mc_robbinsmoro_hes.c
	hes1d_std/mc_twolevel_importancesampling.c
	hes1d_std/mc_alfonsi.c
	hes1d_std/mc_andersen.c
	hes1d_std/mc_lord.c
	hes1d_std/mc_kahljackel.c
	hes1d_std/mc_broadiekaya.c
	hes1d_std/mc_glassermankim.c
	hes1d_std/mc_glassermankim_mod.c
	hes1d_std/mc_joshi.c
	hes1d_std/mc_smith.c
	hes1d_std/mc_zhu.c
	hes1d_std/mc_pelsser.c
	hes1d_std/tr_vellekoop_heston.c
	hes1d_std/hes1d_std.c
	hes1d_std/cf_carr_heston.c
	hes1d_std/cf_attari_heston.c
	hes1d_std/mc_am_alfonsi_longstaffschwartz.c
	hes1d_std/mc_am_alfonsi_andersenbroadie.c
	hes1d_std/ap_cosine_hes1d_euro.c
	hes1d_std/ap_cosine_bermhes1d.c
	hes1d_std/ap_smalltime_impliedvolatility.c
	hes1d_std/ap_asymptotics_impliedvolatility.c
	hes1d_std/mc_am_alfonsi_iterative.c
	hes1d_std/mc_am_alfonsi_mlsm.c
	hes1d_std/ap_fastwhamer_hes.c
	hes1d_std/ap_spm_heston.C
	hes1d_std/mc_malliavin_heston.c
	hes1d_std/fd_ikonentoivanen_heston.c
	hes1d_std/fd_hout_heston.c
	hes1d_vol/hes1d_vol.c
	hes1d_vol/ap_hes_realvar.C
	hes1d_vol/ap_hes_varianceswap.C
	hes1d_vol/cf_hes_varianceswap.C
	hes1d_vol/ap_hes_volatilityswap.C
	hes1d_vol/ap_hes_volatilityswap2.C
    hes1d_vol/ap_hes_zhou.c
	hes1d_vol/mc_timer.c
	)
