add_library (libhullwhite1dgeneralized OBJECT
	hullwhite1dgeneralized.c
	hullwhite1dgeneralized_stdi/hullwhite1dgeneralized_stdi.c
	hullwhite1dgeneralized_stdi/hullwhite1dgeneralized_volcalibration.c
	hullwhite1dgeneralized_stdi/tr_hullwhite1dgeneralized_zcbond.c
	hullwhite1dgeneralized_stdi/tr_hullwhite1dgeneralized_capfloor.c
	hullwhite1dgeneralized_stdi/tr_hullwhite1dgeneralized_swaption.c
	hullwhite1dgeneralized_stdi/cf_hullwhite1dgeneralized_cap.c
	hullwhite1dgeneralized_stdi/cf_hullwhite1dgeneralized_floor.c
	hullwhite1dgeneralized_stdi/cf_hullwhite1dgeneralized_zbcalleuro.c
	hullwhite1dgeneralized_stdi/cf_hullwhite1dgeneralized_zbputeuro.c
	hullwhite1dgeneralized_stdi/cf_hullwhite1dgeneralized_payerswaption.c
	hullwhite1dgeneralized_stdi/cf_hullwhite1dgeneralized_receiverswaption.c
	hullwhite1dgeneralized_stdi/tr_hullwhite1dgeneralized_zbo.c
	hullwhite1dgeneralized_stdi/tr_hullwhite1dgeneralized_bermudianswaption.c
	)
