add_library (libhullwhite2d OBJECT
	hullwhite2d.c
	hullwhite2d_stdi/hullwhite2d_stdi.c
	hullwhite2d_stdi/tr_zbohw2d.c
	hullwhite2d_stdi/cf_zcbondhw2d.c
	hullwhite2d_stdi/cf_zbcalleurohw2d.c
	hullwhite2d_stdi/cf_zbputeurohw2d.c
	hullwhite2d_stdi/cf_caphw2d.c
	hullwhite2d_stdi/cf_floorhw2d.c
	hullwhite2d_stdi/tr_swaptionhw2d.c
	hullwhite2d_stdi/tr_capfloorhw2d.c
	hullwhite2d_stdi/tr_zcbondhw2d.c
	hullwhite2d_stdi/tr_bermudianswaptionhw2d.c
	hullwhite2d_stdi/cf_swaptionhw2d.c
	)
